samples/_failures_safe/1761509659_0b41d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47193166.c:157:1: error: expected identifier or ‘(’ at end of input
  157 | int
      | ^~~
